fix styling issue on iphone

--- a/index.css
+++ b/index.css
@@ -46,7 +46,7 @@ b{
 /*center text and remove default padding*/
 body{
     text-align: center;
-    margin: 0;
+    margin: 0px 0px 20px 0px;
     padding: 0;
     background-color: #ffe64e;
 }
